--- a/app/src/main/res/layout/main_activity_place_item.xml
+++ b/app/src/main/res/layout/main_activity_place_item.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_margin="4dp"
+    card_view:cardCornerRadius="4dp">
 
-    <TextView
-        android:id="@+id/main_activity_rv_place_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="1"/>
 
     <TextView
         android:id="@+id/main_activity_rv_place_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="asd"/>
-
-
-</LinearLayout>
+        android:textSize="@dimen/recent_city_text_size" />
+</android.support.v7.widget.CardView>
