--- a/app/src/main/res/layout/main_activity_place_item.xml
+++ b/app/src/main/res/layout/main_activity_place_item.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/main_activity_rv_place_layout"
     android:layout_margin="4dp"
     card_view:cardCornerRadius="4dp">
 
